# BSC_thesis

./: .gitignore  Assembler.hs  Builder.hs  Test.hs  Types.hs  assembler.cabal
Parser/: AMD.hs  Base.hs  Intel.hs
assembler/: pack.mcmeta
src/: Assembler.hs  Main.hs  Types.hs
src/Parser/: Base.hs  Intel.hs
test/: HUnit.hs  QuickCheck.hs  Test.hs
test/Parser/: NBT.hs
test/tests/: test_add.txt  test_add2.txt  test_cond.txt  test_factorial.txt  test_idiv.txt  test_imul.txt  test_lea.txt  test_mov.txt  test_mov_ext.txt  test_mov_overwrite.txt  test_stack.txt  test_sub.txt
