cabal-version:      2.4
name:               assembler
version:            0.1.0.0

executable assembler
    main-is:          Test.hs

    other-modules:
        Assembler,
        Parser.Base,
        Parser.Intel,
        Types

    build-depends:
        base ^>=4.14.3.0,
        bytestring ^>=0.10.12.0,
        parsec ^>=3.1.14.0,
        parser-combinators ^>= 1.3.0,
        transformers ^>=0.5.6.2

    hs-source-dirs: src
    default-language: Haskell2010
